log
Sat 20 Aug 2022 01:14:15 AM UTC: 
 tests:  0|6
total_score: 0/70
adbe7f1
Sat 20 Aug 2022 01:36:14 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:8: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   33 |   list -> first = NULL;
      |        ^~
list.c:35:8: error: ‘List’ {aka ‘struct List’} has no member named ‘last’
   35 |   list -> last = NULL;
      |        ^~
Compilation failed
4ec8500
Sat 20 Aug 2022 01:38:22 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
30bc67b
Sat 20 Aug 2022 01:40:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
aaf8430
Sat 20 Aug 2022 01:47:37 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:54:19: error: ‘List’ {aka ‘struct List’} has no member named ‘last’
   54 |       return list -> last -> data;
      |                   ^~
Compilation failed
9c85992
Sat 20 Aug 2022 01:48:06 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
3b757c6
Sat 20 Aug 2022 02:28:15 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:22: error: expected ‘)’ before ‘!’ token
   48 |    if (!list->current!list->current->next)
      |       ~              ^
      |                      )
list.c: At top level:
list.c:53:5: error: expected identifier or ‘(’ before ‘return’
   53 |     return NULL;
      |     ^~~~~~
list.c:54:1: error: expected identifier or ‘(’ before ‘}’ token
   54 | }
      | ^
Compilation failed
b04b425
Sat 20 Aug 2022 02:29:10 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:22: error: expected ‘)’ before ‘!’ token
   48 |    if (!list->current !list->current->next)
      |       ~              ^~
      |                      )
list.c: At top level:
list.c:54:1: error: expected identifier or ‘(’ before ‘}’ token
   54 | }
      | ^
Compilation failed
34cee41
Sat 20 Aug 2022 02:34:35 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:53:4: error: expected identifier or ‘(’ before ‘return’
   53 |    return NULL;
      |    ^~~~~~
list.c:54:1: error: expected identifier or ‘(’ before ‘}’ token
   54 | }
      | ^
Compilation failed
44f7b50
Sat 20 Aug 2022 02:35:22 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
31473b4
Sat 20 Aug 2022 02:45:29 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
b07391c
Sat 20 Aug 2022 02:57:20 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
ed72d3b
Sat 20 Aug 2022 03:01:28 AM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|1
total_score: 55/70
c21ec83
